@startuml
skinparam classAttributeIconSize 0

' ================================
' ORGANISATION
' ================================

class OrganisationUnit {
  +id : UUID
  +orgUnitBusinessKey : String
}

class OrganisationUnitVersion {
  +validFrom : Date
  +validTo : Date
  +name : String
}

OrganisationUnit "1" -- "1..*" OrganisationUnitVersion


' ================================
' POSITION MASTER DATA
' ================================

class PositionPost {
  +id : UUID
  +postBusinessKey : String
  +postType : PostType
  +kwFlag : Boolean
  +kwEffectiveDate : Date
}

class PositionPostVersion {
  +validFrom : Date
  +validTo : Date
  +careerGroup : String
  +grade : String
  +budgetReference : String
}

PositionPost "1" -- "1..*" PositionPostVersion
PositionPostVersion --> OrganisationUnit


' ================================
' STAFFING PLAN (SOLL)
' ================================

class StaffingPlanSet {
  +id : UUID
}

class StaffingPlan {
  +id : UUID
  +planVariantType : PlanVariantType
  +workflowStatus : WorkflowStatus
  +validFrom : Date
  +validTo : Date
  +versionNumber : Integer
  +safetyDeductionFactor : Decimal
}

StaffingPlanSet "1" -- "1..*" StaffingPlan


class PlannedPost {
  +id : UUID
}

StaffingPlan "1" -- "1..*" PlannedPost
PlannedPost --> PositionPost
PlannedPost --> OrganisationUnit


class PlannedShare {
  +id : UUID
  +percent : Decimal
  +validFrom : Date
  +validTo : Date
  +isPermanent : Boolean
}

PlannedPost "1" -- "0..*" PlannedShare


' ================================
' STAFFING ASSIGNMENT PLAN (IST)
' ================================

class StaffingAssignmentPlan {
  +id : UUID
  +workflowStatus : WorkflowStatus
  +validFrom : Date
  +validTo : Date
}

StaffingAssignmentPlan --> StaffingPlan
StaffingAssignmentPlan "1" -- "0..*" PositionFilling


class PositionFilling {
  +id : UUID
  +filledFrom : Date
  +filledTo : Date
  +contractualPortionPercent : Decimal
  +currentEmploymentPercent : Decimal
}

PositionFilling --> PlannedPost
PositionFilling --> PlannedShare
PositionFilling --> Person


' ================================
' PERSON
' ================================

class Person {
  +id : UUID
  +centralPersonId : String
  +fullName : String
}

' ================================
' ENUMS
' ================================

enum PostType {
  CIVIL_SERVICE_POST
  EMPLOYEE_POST
}

enum PlanVariantType {
  APPROVED
  SCENARIO
}

enum WorkflowStatus {
  DRAFT
  IN_REVIEW
  APPROVED
  ARCHIVED
}

@enduml
